Update spigot.sh arguments for Java 8
Removed -XX:MaxPermSize argument (Java 8 no longer needs this)
See http://java-latte.blogspot.com/2014/03/metaspace-in-java-8.html